# IM-DONE

./: CLAUDE.md  README.md
backend/: .env.example  .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/config/: __init__.py  settings.py
backend/app/core/: __init__.py  events.py  exceptions.py
backend/app/middleware/: __init__.py  error_handler.py
backend/app/models/: __init__.py  packets.py
backend/app/routers/: __init__.py  health.py  websocket_routes.py
backend/app/scripts/: generate_datasets.py
backend/app/services/: __init__.py  ai_engine.py  dataset_manager.py  frame_router.py
backend/app/services/ai/: __init__.py  asymmetry_detector.py  exercise_catalog.py  geometry.py  landmark_filter.py  mobility_classifier.py  pose_engine.py  posture_analyzer.py  recommendation_similarity.py  rom_analyzer.py
backend/app/services/calibration/: __init__.py  body_validator.py  confidence_analyzer.py  guided_scan_controller.py  orientation_detector.py  scan_fsm.py  stability_detector.py
backend/app/services/exercise_engine/: __init__.py  angle_extractor.py  dataset_exporter.py  (+12 more)
backend/app/utils/: __init__.py  helpers.py  logger.py
backend/app/websocket/: __init__.py  handler.py  manager.py
backend/exercise_datasets/: Create_an_second_ultra_clean_dataset.json  elbow.json  elbow.npz  shoulder_release.json  shoulder_release.npz  t_fly.json  t_fly.npz
backend/exercise_videos/datasets/: elbow.json  t_fly.json
backend/tests/: __init__.py  test_health.py  test_packets.py  test_posture_analyzer.py
(+75 files in other folders)
